--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <script src="/Scripts/app.js"></script>
-    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="dev/CSS/main.css">
 </head>
 
 <body>
