--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <script src="/dev/Scripts/app.js"></script>
+    <script src="/Scripts/app.js"></script>
     <link rel="stylesheet" href="dev/CSS/main.css">
 </head>
 
