--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 style="width: 200px; height: 50px; font-size: 25px; background-color: transparent; color: transparent; display: none;"
                 id="rejectPlaceholder">Không nhé 😡</button>
         </div>
-        <img src="dev/gif/animated.gif" alt="♥">
+        <img src="/dev/gif/animated.gif" alt="♥">
     </div>
     <p></p>
 </body>
